--- a/WindowsFormsAppSeguretat/WindowsFormsAppSeguretat.csproj
+++ b/WindowsFormsAppSeguretat/WindowsFormsAppSeguretat.csproj
@@ -33,6 +33,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BlowFish, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\BlowFish.1.0.2\lib\net452\BlowFish.dll</HintPath>
+    </Reference>
+    <Reference Include="BouncyCastle.Crypto, Version=1.7.4137.9688, Culture=neutral, PublicKeyToken=a4292a325f69b123, processorArchitecture=MSIL">
+      <HintPath>..\packages\BouncyCastle.1.7.0\lib\Net40-Client\BouncyCastle.Crypto.dll</HintPath>
+    </Reference>
+    <Reference Include="OC.Core, Version=2.0.0.17347, Culture=neutral, PublicKeyToken=21d5b409dafb75d2, processorArchitecture=MSIL">
+      <HintPath>..\packages\OC.Core.2.0.0\lib\net40\OC.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="OC.Core.Crypto, Version=1.4.13.38223, Culture=neutral, PublicKeyToken=21d5b409dafb75d2, processorArchitecture=MSIL">
+      <HintPath>..\packages\OC.Core.Crypto.1.4.13\lib\net40\OC.Core.Crypto.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,14 +58,63 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="BD.cs" />
+    <Compile Include="FormLogin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormLogin.Designer.cs">
+      <DependentUpon>FormLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormRol.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormRol.Designer.cs">
+      <DependentUpon>FormRol.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormRols.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormRols.Designer.cs">
+      <DependentUpon>FormRols.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormSeguretat.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSeguretat.Designer.cs">
+      <DependentUpon>FormSeguretat.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormUsuari.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormUsuari.Designer.cs">
+      <DependentUpon>FormUsuari.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormUsuaris.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormUsuaris.Designer.cs">
+      <DependentUpon>FormUsuaris.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormLogin.resx">
+      <DependentUpon>FormLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormRol.resx">
+      <DependentUpon>FormRol.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormRols.resx">
+      <DependentUpon>FormRols.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormSeguretat.resx">
+      <DependentUpon>FormSeguretat.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormUsuari.resx">
+      <DependentUpon>FormUsuari.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormUsuaris.resx">
+      <DependentUpon>FormUsuaris.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -62,7 +123,9 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -75,6 +138,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\plus.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rubbish_bin.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logout.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\seguridad.jfif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
